<resources>
    <string-array name="main_title">
        <item>头条</item>
        <item>百科</item>
        <item>咨询</item>
        <item>经营</item>
        <item>数据</item>
    </string-array>

    <string name="app_name">茶百科</string>
    <string name="collection">收藏夹</string>
    <string name="about_app">关于客户端</string>
    <string name="my_collection">我的收藏</string>
    <string name="copyright">版权信息</string>
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="suggestion">意见反馈</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="loading_data">正在加载数据</string>
    <string name="find_nothing">没找到任何数据</string>
    <string name="keyword">关键字</string>
    <string name="search">搜索</string>
    <string name="hot_search">热门搜索：茶</string>
    <string name="suggestion_title">标题</string>
    <string name="suggestion_content">反馈内容</string>
    <string name="feedback_title_empty">标题不能为空</string>
    <string name="feedback_content_empty">内容不能为空</string>
    <string name="suggestion_commit">提交</string>
    <string name="suggestion_successful">发表成功！</string>
    <string name="collect_successful">收藏成功</string>
    <string name="collect_failure">重复收藏失败</string>
    <string name="check_all">全选</string>
    <string name="uncheck_all">取消</string>
    <string name="revoke">撤销</string>
    <string name="delete_successful">成功删除%d条收藏</string>
    <string name="delete_collection_tip">确认删除选中收藏？</string>
</resources>
